--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header class="allLogo">
         <div class="curriculum">
-            <a href="assets/images/CV FullStack KONATE Abas.pdf" target="_blank">
+            <a href="assets/images/CV KONATE Abas - FullStack.pdf" target="_blank">
                 <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
             </a>
         </div>
@@ -41,7 +41,7 @@
         </div>
         <div class="github">
             <a href="https://github.com/AbasDass" target="_blank">
-                <img class="LG" src="assets/images/icons8-github-48 (1).png" alt="icon github">
+                <img class="LG" src="assets/images/icons8-github-48 (2).png" alt="icon github">
             </a>
         </div>
     </header>
@@ -58,9 +58,7 @@
             </div>
 
             <div class="ageAbas">
-                <p class="ageAbas">
-                    25 ans
-                </p>
+                <p class="ageAbas">25ans</p>
             </div>
             <div class="devWeb">
                 <p class="devWeb">
@@ -86,7 +84,7 @@
                 compétences et expériences professionnelles. -->
 
                 Actuellement en formation diplômante à l'école du numérique<br>La Manu en développement web et application web mobile
-                Je suis donc à la recherche d'une entreprise pouvant m'accueillir afin de monter en compétence et acquérir de l'expérience professionnelle.
+                Je suis à la recherche d'une entreprise pouvant m'accueillir afin de monter en compétence et acquérir de l'expérience professionnelle.
             </p>
         </div>
         <div class="textProjet">
