--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header class="allLogo">
         <div class="curriculum">
-            <a href="assets/images/CV KONATE Abas - FullStack.pdf" target="_blank">
+            <a href="assets/images/CV_Développeur KONATE Abas.pdf" target="_blank">
                 <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
             </a>
         </div>
@@ -58,11 +58,11 @@
             </div>
 
             <div class="ageAbas">
-                <p class="ageAbas">25ans</p>
+                <p class="ageAbas">26 ans</p>
             </div>
             <div class="devWeb">
                 <p class="devWeb">
-                    Développeur Web<br>Full Stack
+                    Développeur Back-End<br>Craftsmanship TDD
                 </p>
             </div>
             <div class="mail">
@@ -83,8 +83,11 @@
                 entreprise pouvant m'accueillir pour approfondir mes<br>
                 compétences et expériences professionnelles. -->
 
-                Actuellement en formation diplômante à l'école du numérique<br>La Manu en développement web et application web mobile
-                Je suis à la recherche d'une entreprise pouvant m'accueillir afin de monter en compétence et acquérir de l'expérience professionnelle.
+                Récemment diplômé à l'école du numérique
+                "La Manu" en développement web et web mobile, je suis à la recherche d'une
+                entreprise pouvant m'accueillir en tant qu'alternant, afin de monter en
+                compétences et acquérir de l'expérience professionnelle. Provisoirement je suis
+                en veille technologique sur Python Django.
             </p>
         </div>
         <div class="textProjet">
@@ -131,18 +134,15 @@
                 DIPLÔMES ET FORMATIONS
             </h2>
             <p class="textEp">
-                Ecole du numérique La Manu<br>développement web et web mobile<br>2022 - 2023<br>
-                <span>Campus de Compiègne</span><br>
+                Développement C# .NET<br>De mai 2023 à juillet 2023<br>
+                Campus de Compiègne La Manu<br>
+                <br>
+                Ecole du numérique La Manu <b>(Bac+2)</b><br>développement web et web mobile<br>2022 - 2023<br>
+                <span>Campus de Compiègne La Manu</span><br>
                 <br>
                 Formation à l'afpa Back End (Symfony)<br>2022<br>
                 <span>Centre de l'Afpa de Beauvais</span><br>
                 <br>
-                Mention Complémentaire Traiteur<br>2017 - 2018<br>
-                <span>Lycée Charles De Gaulle Compiègne</span><br>
-                <br>
-                Bac Professionnel- Art Culinaire<br>2016 - 2017<br>
-                <span>Lycée Charles De Gaulle Compiègne</span>
-
             </p>
         </div>
         <div class="informatique">
@@ -170,7 +170,7 @@
                         <li>CSS</li>
                         <li>BOOTSTRAP</li>
                         <li>JAVASCRIPT</li>
-                        <li>PHP(TDD)</li>
+                        <li>PHP</li>
                         <li>FIGMA</li>
                         <li>PHOTOSHOP</li>
                         <li>PREMIERE PRO</li>
@@ -184,25 +184,17 @@
                 EXPÉRIENCES PROFESSIONNELLES
             </h2>
             <p class="textEp">
+                Projet de développement | Club Basket Depuis mars 2023<br>
+                ASCC Basket Compiègne<br>
+                <br>
                 Stagiaire - développement web De mai 2022 à juin 2022<br>
                 INSY2S - Lille<br>
                 <br>
                 Assistant d'éducation De 2020 à 2021<br>
                 Collège François Villon Cambrai, France<br>
-                Chargé de la bonne pédagogie des élèves<br>
                 <br>
                 Intervenant Sportive De 2019 à 2020<br>
                 Ecoles de la commune<br>Margny-Lès-Compiègne<br>
-                <br>
-                Stage en Art Culinaire De 2018 à 2019<br>
-                La Boule d'Or Thourotte, France<br>
-                Gérer une équipe et élaborer<br>la mise en place du service de restauration<br>
-                <br>
-                Commis Art Culinaire De 2017 à 2018<br>
-                Scapin Margny-lès-Compiègne, France<br>
-                <br>
-                Commis Art Culinaire De 2016 à 2017<br>
-                Patrimoine et terroir Compiègne<br>
             </p>
         </div>
     </section>
@@ -224,8 +216,11 @@
                 <p>Merise</p>
                 <p>MySQL</p>
                 <p>SQL</p>
-                <p>PHP(TDD)</p>
+                <p>PHP</p>
                 <p>SYMFONY</p>
+                <p>PYTHON</p>
+                <p>DJANGO</p>
+                <p>C#</p>
             </div>
         </div>
     </footer>
