--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="devWeb">
                 <p class="devWeb">
-                    Développeur Back-End<br>Craftsmanship TDD
+                    Développeur<br>Back-End<br>Craftsmanship TDD
                 </p>
             </div>
             <div class="mail">
