--- a/index.html
+++ b/index.html
@@ -92,28 +92,38 @@
         </div>
         <div class="textProjet">
             <p>
-                PROJET AU COURS<br> DE LA FORMATION <span id="redim">VITRINE</span>
+                PROJET EN COURS 
+            </p>
+            <p class="textProjetAscc">
+                Avec une technologie qui me passionne depuis mes débuts<br>
+                je suis en charge de l'implémentation et la maintenabilité d'un projet pour un club de Basket<br>
+                avec le langage PYTHON et son framewok DJANGO
+            </p>
+            <p  class="textGit">
+                Mes projets sur GitHub: <a href="https://github.com/AbasDass" target="_blank">https://github.com/AbasDass</a>
             </p>
         </div>
 
         <div class="cardProject">
             <div class="carre1">
-                <p class="textP">
-                    En réalisant cette interface<br>j'ai appris à utiliser le framework<br>bootstrap en m'aidant de la documentation
-                    <br>du framework
-                </p>
                 <!-- <a href="https://abasdass.github.io/Projet-All-show-La-Manu/index.html" target="_blank"> -->
-                    <img class="projet1" src="assets/images/ALLSHOWIMG2.png" alt="Image de projet">
+                    <img class="projet1" src="assets/images/photo portfolio/Capture d’écran 2023-09-25 013153.png" alt="Image de projet">
                 <!-- </a> -->
             </div>
 
-            <div class="carre2">
-                <p class="textP2">
-                    interface réalisée en HTML&CSS<br>le but était de créer une vitrine<br>E-commerce de
-                    notre choix<br>sans framework
-                </p>
+            <div class="carre1">
                 <!-- <a href="https://abasdass.github.io/E-liquideShop/" target="_blank"> -->
-                    <img class="projet2" src="assets/images/eliquide capture.png" alt="Image de projet">
+                    <img class="projet2" src="assets/images/photo portfolio/Capture d’écran 2023-09-25 013334.png" alt="Image de projet">
+                <!-- </a> -->
+            </div>
+            <div class="carre1">
+                <!-- <a href="https://abasdass.github.io/E-liquideShop/" target="_blank"> -->
+                    <img class="projet2" src="assets/images/photo portfolio/Capture d’écran 2023-09-25 013424.png" alt="Image de projet">
+                <!-- </a> -->
+            </div>
+            <div class="carre1">
+                <!-- <a href="https://abasdass.github.io/E-liquideShop/" target="_blank"> -->
+                    <img class="projet2" src="assets/images/photo portfolio/Capture d’écran 2023-09-25 013542.png" alt="Image de projet">
                 <!-- </a> -->
             </div>
         </div>
