--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
 					<a href="#contact" class="text-gray-700 hover:text-blue-600">Contact</a>
 				</nav>
 				<div class="flex items-center gap-3">
-					<a href="assets/images/Abas_Konate_CV_Developpeur_Backend_PHP_Laravel_2025.pdf" target="_blank" class="inline-flex items-center gap-2 rounded-md border border-gray-300 px-3 py-1.5 text-sm hover:border-blue-500 hover:text-blue-600">
-						<img src="assets/images/icons8-cv-48.png" alt="CV" class="h-5 w-5">
-						<span>Télécharger CV</span>
-					</a>
 					<a href="https://www.linkedin.com/in/abas-konat%C3%A9-2aa49a223/?originalSubdomain=fr" target="_blank" aria-label="LinkedIn" class="p-2 rounded hover:bg-gray-100">
 						<img src="assets/images/icons8-linkedin-entouré-48.png" alt="LinkedIn" class="h-6 w-6">
 					</a>
@@ -55,7 +51,7 @@
                         Créateur d’applications web  <span class="font-semibold text-blue-600">Laravel freelance</span>
                       </p>
 					<div class="mt-6 flex flex-wrap items-center gap-3">
-						<a href="mailto:konate.abas@hotmail.fr" class="inline-flex items-center gap-2 rounded-md bg-blue-600 px-4 py-2 text-white hover:bg-blue-700">
+						<a href="mailto:contact@konateabas.fr" class="inline-flex items-center gap-2 rounded-md bg-blue-600 px-4 py-2 text-white hover:bg-blue-700">
 							<span>Me contacter</span>
 						</a>
 						<a href="#projets" class="inline-flex items-center gap-2 rounded-md border border-gray-300 px-4 py-2 text-gray-800 hover:border-blue-500 hover:text-blue-600">Voir mes projets</a>
@@ -80,7 +76,7 @@
           <!-- Projet en cours -->
           <p class="mt-3 text-gray-700">
             <span class="font-semibold text-blue-600">Projets réalisés</span> — Exemples de missions menées avec succès,
-            dont une <span class="font-semibold">boutique en ligne</span> pour un créateur TikTok (20k abonnés)
+            dont une <span class="font-semibold">boutique en ligne</span> pour un créateur TikTok (80k abonnés)
             et des <span class="font-semibold">applications web modernes.</span>
           </p>
           
@@ -88,11 +84,12 @@
           <div class="mt-10 grid sm:grid-cols-2 gap-6">
             <!-- Projet vitrine (formation) -->
             <article class="group overflow-hidden rounded-xl border border-gray-200 bg-white shadow-sm">
-                <div class="aspect-[16/10] overflow-hidden bg-gray-100">
-                  <img src="assets/images/NLTSCAPT.PNG"
-                       alt="Projet vitrine"
-                       class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105">
-                </div>
+              <div class="aspect-[16/10] overflow-hidden bg-gray-50 flex justify-center items-center">
+                <img src="assets/images/NLTSCAPT.PNG"
+                     alt="Projet vitrine"
+                     class="max-w-full max-h-full object-contain transition-transform duration-300 group-hover:scale-105">
+              </div>
+              
                 <div class="p-5">
                   <h3 class="font-semibold">NBA LIVE TRACKING SCORE</h3>
                   <p class="mt-2 text-sm text-gray-600">
@@ -118,7 +115,7 @@
                 <h3 class="font-semibold">Luxury&Co</h3>
                 <p class="mt-2 text-sm text-gray-600">
                   Développement d’un e-commerce complet avec gestion du panier, paiement Stripe et back-office.
-                  Projet livré pour un créateur TikTok suivi par <span class="font-semibold">20 000 abonnés</span>.
+                  Projet livré pour un créateur TikTok suivi par <span class="font-semibold">80 000 abonnés</span>.
                 </p>
                 <div class="mt-3 flex flex-wrap gap-2 text-xs">
                   <span class="rounded-full bg-gray-100 px-3 py-1">Laravel</span>
@@ -149,7 +146,7 @@
             </p>
             <p class="mt-3 text-gray-600 leading-relaxed">
                 J’ai notamment développé une boutique
-                en ligne pour un créateur TikTok suivi par <span class="font-semibold">20 000 abonnés</span>.
+                en ligne pour un créateur TikTok suivi par <span class="font-semibold">80 000 abonnés</span>.
             </p>
 		</div>
 	</section>
@@ -166,7 +163,7 @@
             <!-- Email -->
             <a href="mailto:konate.abas@hotmail.fr"
                class="inline-flex items-center gap-2 rounded-md bg-blue-600 px-4 py-2 text-white hover:bg-blue-700">
-              📧 konate.abas@hotmail.fr
+              📧 contact@konateabas.fr
             </a>
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/abas-konat%C3%A9-2aa49a223/?originalSubdomain=fr"
@@ -181,7 +178,7 @@
               <img src="assets/images/icons8-github-48 (2).png" alt="GitHub" class="h-5 w-5">GitHub
             </a>
             <!-- CV -->
-            <a href="assets/images/Abas_Konate_CV_Developpeur_Backend_PHP_Laravel_2025.pdf"
+            <a href="assets/images/CV_Abas_Konate.pdf"
                target="_blank"
                class="inline-flex items-center gap-2 rounded-md border border-gray-300 px-4 py-2 text-gray-800 hover:border-blue-500 hover:text-blue-600">
               <img src="assets/images/icons8-cv-48.png" alt="CV" class="h-5 w-5">CV (PDF)
@@ -194,7 +191,6 @@
 	<footer class="border-t border-gray-200">
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 text-sm text-gray-500 flex flex-col sm:flex-row items-center justify-between gap-4">
 			<p>© <span id="year"></span> KONATE Abas. Tous droits réservés.</p>
-			<p><span class="text-gray-700">Stack:</span> HTML, Tailwind CSS</p>
 		</div>
 	</footer>
 
