change name project

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               </div>
               
                 <div class="p-5">
-                  <h3 class="font-semibold">NBA LIVE TRACKING SCORE</h3>
+                  <h3 class="font-semibold">NBA LIVE TRACKER STATS</h3>
                   <p class="mt-2 text-sm text-gray-600">
                     Développement d’un site autour des <span class="font-semibold">statistiques NBA</span>,
                     explorant les performances des joueurs et leur <span class="font-semibold">causalité avec la vie personnelle</span>.
